<resources>
    <string name="app_name">IMC</string>
    <string name="message">Vamos Calcular o seu IMC?</string>
    <string name="butao">Calcular</string>
    <string name="message_classificacao">Classificação: %1$s</string>
    <string name="tvimc">O seu IMC é:</string>
    <string name="tvtab">Veja a tabela de classificação abaixo:</string>
    <string name="tvpesoAbaixo">Menor que 18,5      Abaixo do peso</string>
    <string name="tvpesoNormal">Entre 18,5 e 24,9   Normal 0 </string>
    <string name="tvsobrepeso">Entre 25,0 e 29,9   Sobrepeso I</string>
    <string name="tvobesidade">Entre 30,0 e 39,9   Obesidade II</string>
    <string name="tvobgrave">Maior que 40,0      Obesidade Grave III</string>
</resources>