<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp"
    android:textAlignment="center"
    tools:context=".ResultActivity">

    <TextView
        android:textSize="19sp"
        android:text="@string/tvimc"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/textview_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        tools:text="Hello"
        android:textSize="38sp"
        android:textAlignment="center"

    />
    <TextView
        android:id="@+id/textview_classificacao"
        tools:text="Classificação: Abaixo do Peso"
        android:textSize="40sp"
        android:textAlignment="center"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:text="@string/tvtab"
        android:textAlignment="center"
        android:textSize="21sp"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvpesoAbaixo"
        android:layout_margin="10dp"
        android:textSize="22sp"
        />

 <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvpesoNormal"
        android:layout_margin="10dp"
        android:textSize="22sp"
        />
    <TextView
        android:textSize="22sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvsobrepeso"
        android:layout_margin="10dp"
        />
    <TextView
        android:textSize="22sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvobesidade"
        android:layout_margin="10dp"
        />
    <TextView
        android:textSize="22sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvobgrave"
        android:layout_margin="10dp"
        />


</LinearLayout>